verificaciones en formularios de creacion de producto, se elimina etiqueta de descuento para productos sin descuento.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -456,7 +456,8 @@ main {
     border-radius: 5px;
     font-weight: bold;
     position: relative;
-    bottom: 62px
+    bottom: 62px;
+    
 }
 
 .productName {
