--- a/src/views/productCart.ejs
+++ b/src/views/productCart.ejs
@@ -17,7 +17,7 @@
         <h2>Mi carrito</h2>
         <article>
             <form action="/productCart" method="get" class="formulario-padre">
-                <section><p>Descripción</p><p class="p-precio">Precio</p><p>Cantidad de productos</p></section>
+                <section><p class="d">Descripción</p><p class="p-precio">Precio</p><p>Cantidad de productos</p></section>
                 <div class="productInfo">
                     <img src="/img/lenovo.png" alt="producto">
                     <p class="description">Laptop Lenovo</p>
