--- a/public/css/register.css
+++ b/public/css/register.css
@@ -244,7 +244,7 @@ body {
 
 /* main*/
 main {
-    background-color: #1e1e22;
+    background-color: #1E1E22;
     width: 100%;
     min-width: 260px;
 }
