--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -28,11 +28,11 @@
                     <form action="/user/login" method="POST" class="form-login">
                         <h5>Iniciar sesión con mi email</h5>
                         <!--<input class="cajita" type="checkbox" name="" value="">  -->
-                        <input class="controls <%= locals.errors && errors.username ? 'invalido' : null%> "  type="text"  name="username" value="<%= locals.oldData ? oldData.username : null %>"
-                            placeholder="Usuario" >
-                            <% if (locals.errors && errors.username) { %>
+                        <input class="controls <%= locals.errors && errors.email ? 'invalido' : null%> "  type="email"  name="email" value="<%= locals.oldData ? oldData.email : null %>"
+                            placeholder="Email" >
+                            <% if (locals.errors && errors.email) { %>
                                 <div class="mensaje-de-error">
-                                    <i class="fas fa-exclamation-triangle"></i><%= errors.username.msg %> 
+                                    <i class="fas fa-exclamation-triangle"></i><%= errors.email.msg %> 
                                 </div> 
                                 <% } %> 
                         <input class="controls <%= locals.errors && errors.password ? 'invalido' : null%> " type="password"  name="password"
@@ -40,11 +40,15 @@
                             <% if (locals.errors && errors.password) { %>
                                 <div class="mensaje-de-error">
                                     <i class="fas fa-exclamation-triangle"></i><%= errors.password.msg %> 
-                                </div> 
+                                </div>                               
                                 <% } %> 
+                                <div class="rememberMe">
+                                    <input type="checkbox" name="rememberMe" id="rememberMe">
+                                    <label class="labelCheckbox" for="rememberMe">Recordar mi usario</label>
+                                </div>
                         <div class="texto-login">
                             <a class="registrarme" ; padding: 6px;; href="/user/register"> Registrame</a>
-                            <a class="contraseña" ; href="#"> ¿Olvidaste tu Contraseña?</a>
+                            <a class="contraseña" ; href="#"> ¿Olvidaste tu Contraseña?</a>                   
                         </div>
                         <div class="button-container">
                             <a style="text-decoration: none;" href="/index"><button type="submit"
