--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,8 +14,12 @@
         </div>
         </form>
         <div class="icons-top-bar">
+            <% if (locals.isLogged) { %>
+             <a href="/"><i class="fa-regular fa-user"></i> <%= locals.userLogged.fullName %> </a>
+            <% } else { %>
             <a href="/user/login"><i class="fa-regular fa-user"></i> Ingresar</a>
             <a href="/user/register">Registrarse</a>
+            <% } %>
             <a href="/user/productCart"><i class="fa badge" style="font-size:24px" value=5>&#xf07a;</i></a>
         </div>
     </div>
