--- a/src/views/addProduct.ejs
+++ b/src/views/addProduct.ejs
@@ -79,8 +79,8 @@
                     <div>
                         <select class="category" name="categoria" id="category">
                             <option value="" disabled selected hidden>Elige una categoría</option>
-                            <option value="PC"  <%= locals.oldData && oldData.categoria=="PC" ? "selected" : null %>>PC</option>
-                            <option value="Notebooks" <%= locals.oldData && oldData.categoria=="Notebooks" ? "selected" : null %>>Notebook</option>
+                            <option value="Computadores"  <%= locals.oldData && oldData.categoria=="Computadores" ? "selected" : null %>>Computadores</option>
+                            <option value="Notebooks" <%= locals.oldData && oldData.categoria=="Notebooks" ? "selected" : null %>>Notebooks</option>
                             <option value="Monitores" <%= locals.oldData && oldData.categoria=="Monitores" ? "selected" : null %>>Monitores</option>
                             <option value="Teclados" <%= locals.oldData && oldData.categoria=="Teclados" ? "selected" : null %>>Teclados</option>
                             <option value="Mouse" <%= locals.oldData && oldData.categoria=="Mouse" ? "selected" : null %>>Mouse</option>
