--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -34,11 +34,9 @@
 
                 <h2>PRODUCTOS </h2>
 
-                <a href="/product/create">
                     <div class="add-button">
-                        <p>Agregar producto</p>
+                        <a href="/product/create"><p>Agregar producto</p></a>
                     </div>
-                </a>
 
                 <div class="products">
                     <% productos.forEach(producto=> { %>
