--- a/public/css/addProduct.css
+++ b/public/css/addProduct.css
@@ -4,11 +4,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: 'Lato', sans-serif; */
+font-family: 'Lato', sans-serif; 
 }
 
 body {
-    font-family: 'Roboto', Arial;
     font-size: 12px;
     background-color: #080808;
 }
@@ -244,7 +243,7 @@ header {
 
 /* main*/
 main {
-    background-color: #1e1e22;
+    background-image: url('../img//background/finalbackground.png');
     width: 100%;
     min-width: 260px;
 }
