--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,12 +4,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: 'Lato', sans-serif; */
+    font-family: 'Lato', sans-serif;
 }
 
 body {
-    
-    font-family: 'Roboto', Arial;
+    background-image: url('../img//background/finalbackground.png');
     font-size: 12px;
     background-color: #080808;
 }
