--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -5,14 +5,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: 'Lato', sans-serif; */
+    font-family: 'Lato', sans-serif;
 }
 
 body {
-    
-    font-family: 'Roboto', Arial;
     font-size: 12px;
     background-color: #080808;
+    background-image: url('../img//background/finalbackground.png');
 }
 
 
@@ -176,6 +175,7 @@ body {
 
 
  main {
+    
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
@@ -215,9 +215,11 @@ h2 {
     margin-bottom: 10px;
     color: black;
     width: 35%;
-    font-weight: 535;
+    font-weight: bold;
     transition: all 0.5s;
     border: none;
+    box-shadow: 0px 0px 5px 2px #080808;
+    cursor: pointer;
 }
 .boton {
     background-color: #4A4A4A;
@@ -238,9 +240,9 @@ h2 {
 } 
 .boton-compra:hover{
     color: #080808;
+    transform: scale(0.89);
     background-color: #7EFF00;
-    font-style: italic;
-    font-weight: bold;
+
 }
 .productInfo {
     margin-bottom: 10px;
