--- a/public/css/productList.css
+++ b/public/css/productList.css
@@ -4,11 +4,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: 'Lato', sans-serif; */
+    font-family: 'Lato', sans-serif;
 }
 
 body {
-    font-family: 'Roboto', Arial;
+    background-image: url('../img//background/finalbackground.png');
     font-size: 12px;
     background-color: #080808;
 }
@@ -260,6 +260,7 @@ body {
 
 
 main {
+    
     margin-left: auto;
     margin-right: auto;
     width: 85%;
@@ -268,7 +269,9 @@ main {
 
 .Category h2,
 .recomended h2 {
-    color: #7EFF00;
+    color: #FFFFFF;
+    -webkit-text-stroke: 0.1px black;
+    text-shadow: 0px 0px 5px #000;
     letter-spacing: 3px;
     margin: 10px 0px;
     border-bottom: 1px solid #4A4A4A;
@@ -282,16 +285,21 @@ main {
 .add-button {
     background-color: #4A4A4A;
     padding: 10px;
-    width: 120px;
+    width: 130px;
     text-align: center;
     margin: 5px 0;
     border-radius: 15px;
     transition: all 400ms ease;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 .add-button:hover{
     background-color: #7EFF00;
-    color: #4A4A4A;
+}
+
+.add-button a:hover{
+    color: #080808;
 }
 
 
@@ -300,18 +308,16 @@ main {
     position:relative;
     margin: 5px;
     background-color: #4A4A4A;
-    box-shadow: 0 0.2rem 0.5rem rgba(202, 199, 255, 0.771);
+    box-shadow: 0px 0px 5px 1px rgba(202, 199, 255, 0.771);
     border-radius: 0.5rem;
     padding: 0.4rem 0;
     transition: box-shadow 400ms ease;
     /* cursor: pointer; */
     border-top: #7EFF00 solid 2px;
-    border-bottom: #7EFF00 solid 2px;
-
 }
 
 .products article:hover {
-    box-shadow: 0 0.4rem 1rem #80ff00a2;
+    box-shadow: 0px 0px 5px 2px #7EFF00;
 }
 
 .products article img {
@@ -338,9 +344,10 @@ main {
     color: #cac7ff;
     font-weight: bold;
     margin: 10px 0;
+    transition: all 0.5s;
 }
 .productName:hover{
-    color:#7EFF00
+    color:#7EFF00;
 }
 
 .price, .short-description,.long-description{
@@ -362,16 +369,25 @@ main {
 .edit-button-container{
     text-align: center;
     position:absolute;
-    background-color: #4c9800;
+    background-color: #7EFF00;
+    box-shadow: 0px 0px 6px 1px #080808;
     padding: 3px;
     border-radius: 5px;
+    width: 40px;
+    height: 20px;
     top:10px;
     right:10px;
 }
 
+.edit-button-container a{
+    color: #080808;
+    font-weight: bold;
+}
+
+
 .edit-button{
+    border: none;
     text-decoration: none;
-    color: #cac7ff;
 }
 
 
@@ -380,7 +396,8 @@ main {
     position:absolute;
     border:none;
     color: #cac7ff;
-    background-color: darkred;
+    background-color: rgb(190, 22, 22);
+    box-shadow: 0px 0px 6px 1px #080808;
     padding: 3px;
     cursor:pointer;
     border-radius: 5px;
@@ -674,6 +691,32 @@ footer {
     .icons-top-bar {
 
         width: 40%;
+    }
+
+    .edit-button-container {
+        width: 90px;
+        height: 25px;
+        transition: all 0.5s;
+    }
+
+    .edit-button-container:hover {
+        background-color: #6bb324;
+        transform: scale(0.89);
+    }
+
+    .edit-button {
+        position: relative;
+        top: 3px;
+        
+    }
+
+    .action-button-delete {
+        transition: all 0.5s;
+    }
+
+
+    .action-button-delete:hover {
+        transform: scale(0.89);
     }
 
     /*FOOTER*/
