--- a/public/css/register.css
+++ b/public/css/register.css
@@ -244,7 +244,7 @@ body {
 
 /* main*/
 main {
-    background-color: 080808;
+    background-image: url('../img//background/finalbackground.png');
     width: 100%;
     min-width: 260px;
 }
