--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/productList.css">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:ital@1&family=Roboto:ital,wght@0,100;1,100&display=swap"
+    rel="stylesheet">
     <title>Pixel E-Comerce</title>
 </head>
 
@@ -32,7 +35,7 @@
 
             <section class="Category">
 
-                <h2>PRODUCTOS </h2>
+                <h2>Productos </h2>
 
                     <div class="add-button">
                         <a href="/product/create"><p>Agregar producto</p></a>
