se añade middleware autenticación de admin, y de guest para impedir que un usuario logeado acceda a login o a register

--- a/src/views/productListUser.ejs
+++ b/src/views/productListUser.ejs
@@ -70,8 +70,7 @@
                                     </h2>
                                     <div class="products">
                                         <%let productosCategoria=productos.filter(producto=>producto.categoria==categoriaN)%>
-                                        <%productosCategoria.forEach(producto=> { 
-                                            console.log(producto)%>
+                                        <%productosCategoria.forEach(producto=> { %>
 
                                         <% let valorFinal=producto.precio-(producto.precio*producto.descuento)/100 %>
 
