--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -28,7 +28,7 @@
     </div>
     <nav class="nav-bar">
 
-        <a href="/product/list/admin"> 
+        <a href="/product/list"> 
             <div class="nav-bar-button">
                 <p>Productos</p>
             </div>
