se agrega error 404 y direccionamiento en product detail

--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -52,7 +52,7 @@
                     </p>
                 </div>
                 <div class="button-container">
-                    <button class="btn_compra">Agregar al carrito</button>
+                    <a href="/user/productCart"><button class="btn_compra">Agregar al carrito</button></a>
                 </div>
 
 
