--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -252,6 +252,7 @@ section {
     background-color: #4D4E4E;
     text-align: center;
     width: 90%;
+    max-width: 450px;
     margin-top: 20px;
     margin-bottom: 20px;
     height: 500px;
@@ -268,6 +269,7 @@ section {
 
 .avatar img {
     border-radius: 100%;
+    width: 250px;
     border: 10px double #303030;
 }
 
@@ -465,6 +467,10 @@ footer {
     .lista3 h4 {
         padding-bottom: 10px;
         font-size: 14px;
+    }
+
+    .avatar img {
+        width: 250px;
     }
 }
 
