se añade función de cambiar imagen principal en product detail

--- a/src/views/not-found.ejs
+++ b/src/views/not-found.ejs
@@ -12,8 +12,9 @@
 
 <body>
     <main>
+
         <div class="cuadro"><img src="/img/error.png" alt="img1" class="imagen" width="100%"></div>
-        <h1>Ups la pagina que solicitas no existe!</h1>
+        <h2>Ups, parece que la pagina que solicitas no existe!</h2>
     </main>
 </body>
 
