--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -238,12 +238,17 @@ main {
 }
 
 .view_prod{
-    width:30%;
+    width:22%;
     box-shadow: 0 0.2rem 0.5rem black;
     background: linear-gradient(whitesmoke,#4A4A4A);
+    transition: transform 100ms ease-in-out;
+    
 }
 
-
+.view_prod:hover{
+    transform: scale(1.05);
+    cursor:pointer
+}
 
 
 /* TEXT */
